--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         </div>
 
         <div class="actions-right">
+            <div id="sync-status" class="sync-status not-configured" title="Molnsynk status">
+                <span class="sync-icon"><i class="fa-solid fa-cloud-arrow-up"></i></span>
+                <span class="sync-text">Ej konfigurerad</span>
+            </div>
             <div class="year-filter-container">
                 <i class="fa-regular fa-calendar"></i>
                 <select id="year-select">
@@ -286,8 +290,13 @@
     </div>
     </div>
 
+    <!-- Firebase SDK (compat mode for simplicity) -->
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+
     <!-- Scripts -->
     <script src="birds.js"></script>
+    <script src="firebase-sync.js"></script>
     <script src="sweden-map.js"></script>
     <script src="app.js"></script>
 </body>
