--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -33,16 +34,16 @@
             </nav>
 
             <div class="user-toggles">
-                <button class="user-btn active" data-user="Theia">Theia</button>
                 <button class="user-btn" data-user="Alexander">Alexander</button>
+                <button class="user-btn active" data-user="Theia">Theia</button>
             </div>
         </div>
 
         <div class="actions-right">
-            <div id="sync-status" class="sync-status not-configured" title="Molnsynk status">
-                <span class="sync-icon"><i class="fa-solid fa-cloud-arrow-up"></i></span>
-                <span class="sync-text">Ej konfigurerad</span>
-            </div>
+            <!-- Sync Status Removed -->
+            <button id="install-btn" class="icon-btn" title="Installera appen" style="display: none;">
+                <i class="fa-solid fa-download"></i>
+            </button>
             <div class="year-filter-container">
                 <i class="fa-regular fa-calendar"></i>
                 <select id="year-select">
@@ -373,15 +374,23 @@
     </div>
     </div>
 
-    <!-- Firebase SDK (compat mode for simplicity) -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
+    <!-- Firebase SDK Removed -->
 
     <!-- Scripts -->
     <script src="birds.js"></script>
-    <script src="firebase-sync.js"></script>
+    <!-- firebase-sync.js Removed -->
     <script src="sweden-map.js"></script>
     <script src="app.js"></script>
+
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(reg => console.log('SW registered!', reg))
+                    .catch(err => console.log('SW failed', err));
+            });
+        }
+    </script>
 </body>
 
 </html>
